# konig

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  setup.py
konig/: CMakeLists.txt  graphgen.hpp  konig.cpp
konig/include/: AdjacencyManager.hpp  AdjacencyTree.hpp  DirectedGraph.hpp  EdgeManager.hpp  Exception.hpp  Graph.hpp  InvalidArgument.hpp  StructureManager.hpp  StructureViolation.hpp  UndirectedGraph.hpp  konig.hpp  random.hpp  util.hpp  utils.hpp
konig/src/: EdgeManager.cpp  Graph.cpp  konig.cpp
konig/tests/: TestAdjacencyManager.cpp  TestAdjacencyTree.cpp  test_all.cpp
legacy/: legacy.py
pykonig/tests/: test_bindings.py
tests/: test.cpp
